<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">InSureApp</string>
    <string name="background">Backgorund_image</string>
    <!--Activity Login -->
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="login_button">Login </string>
    <!--Activity Menu -->
    <string name="personal_information">Personal Info</string>
    <string name="claims_history">See Claims</string>
    <string name="new_claim">New Claim</string>
    <string name="logout_button">Log out</string>
    <!--Activity Person -->
    <string name="person_name">Name:  </string>
    <string name="fiscal_number">Fiscal Number:  </string>
    <string name="address">Address:  </string>
    <string name="date_of_birth">Date of birth:  </string>
    <string name="insurance_polic_number">Policy number:  </string>
    <!--Activity List Claim -->
    <string name="back_button">BACK </string>
    <string name="my_claims">My claims</string>
    <!--Activity Claim Information -->
    <string name="claim_information">Claim Information </string>
    <string name="claim_title">Claim title: </string>
    <string name="date">Date: </string>
    <string name="car_plate">Car plate: </string>
    <string name="description">Description: </string>
    <string name="claim_status">Status: </string>
    <!--Activity Claim Information -->
    <string name="customer_information">Customer Information: </string>
    <string name="submission_date">Submission date: </string>
    <!--Activity New Claim -->
    <string name="new_insurance_claim">New Claim</string>
    <string name="title"> Title:</string>
    <string name="number_of_plate">Number of plate:</string>
    <string name="occurrence_date">Occurrence Date:</string>
    <string name="submit_claim_button">SUBMIT</string>
    <!-- Messages -->
    <string name="claim_id">Claim ID:</string>
    <string name="button_send">SEND</string>
</resources>
